tests/end_to_end/candid_rpc/class_syntax/rejections/src/some_canister/index.did
service: () -> {
    accept: () -> (bool) query;
    error: () -> (empty) query;
    reject: (text) -> (empty) query;
}
